#the-expans-app overflow: fix w/ svg height - 4px

--- a/src/global.css
+++ b/src/global.css
@@ -8,6 +8,5 @@ body,
 }
 
 #the-expans--app {
-  overflow: hidden;
   background: #82b6ee;
 }
